RESOLVED FIXED204175
REGRESSION (r249434): flashy menus on wellsfargo.com
https://bugs.webkit.org/show_bug.cgi?id=204175
Summary REGRESSION (r249434): flashy menus on wellsfargo.com
Simon Fraser (smfr)
Reported 2019-11-13 15:44:52 PST
REGRESSION (r249434): flashy menus on wellsfargo.com
Attachments
Patch (8.45 KB, patch)
2019-11-13 15:49 PST, Simon Fraser (smfr)
zalan: review+
Simon Fraser (smfr)
Comment 1 2019-11-13 15:49:52 PST
Simon Fraser (smfr)
Comment 2 2019-11-13 15:49:54 PST
Simon Fraser (smfr)
Comment 3 2019-11-13 16:35:52 PST
Note You need to log in before you can comment on or make changes to this bug.