Source/WebCore/rendering/RenderLayerCompositor.cpp
@@ -2426,6 +2426,10 @@ bool RenderLayerCompositor::requiresOwnBackingStore(const RenderLayer& layer, co
     if (layer.isComposited() && layer.backing()->hasBackingSharingLayers())
         return true;
 
+    // FIXME: We really need to keep track of the ancestor layer that has its own backing store.
+    if (!ancestorCompositedBounds.contains(layerCompositedBoundsInAncestor))
+        return true;
+
     if (layer.mustCompositeForIndirectReasons()) {
         IndirectCompositingReason reason = layer.indirectCompositingReason();
         return reason == IndirectCompositingReason::Overlap
@@ -2435,10 +2439,6 @@ bool RenderLayerCompositor::requiresOwnBackingStore(const RenderLayer& layer, co
             || reason == IndirectCompositingReason::GraphicalEffect
             || reason == IndirectCompositingReason::Preserve3D; // preserve-3d has to create backing store to ensure that 3d-transformed elements intersect.
     }
-
-    // FIXME: We really need to keep track of the ancestor layer that has its own backing store.
-    if (!ancestorCompositedBounds.contains(layerCompositedBoundsInAncestor))
-        return true;
 
     return false;
 }
